--- a/sample/index.html
+++ b/sample/index.html
@@ -23,7 +23,7 @@
             width: 200px;
         }
     </style>
-    </head>
+</head>
 
 <body>
     <header>
@@ -39,24 +39,25 @@
             <div class="album">
                 <a href="./images/KY1.jpg" data-lightbox="abc" data-title="桜写真拡大">
                     <img src="./images/KY1.jpg" alt="">
-                 </a>
-                 <a href="./images/KY2.jpg" data-lightbox="abc" data-title="桜写真拡大">
+                </a>
+                <a href="./images/KY2.jpg" data-lightbox="abc" data-title="桜写真拡大">
                     <img src="./images/KY2.jpg" alt="">
-                 </a>
-                 <a href="./images/KY3.jpg" data-lightbox="abc" data-title="桜写真拡大">
+                </a>
+                <a href="./images/KY3.jpg" data-lightbox="abc" data-title="桜写真拡大">
                     <img src="./images/KY3.jpg" alt="">
-                 </a>
-                 <a href="./images/KY4.jpg" data-lightbox="abc" data-title="桜写真拡大">
+                </a>
+                <a href="./images/KY4.jpg" data-lightbox="abc" data-title="桜写真拡大">
                     <img src="./images/KY4.jpg" alt="">
-                 </a>
-                 
+                </a>
+
 
             </div>
         </section>
         <section id="picgram">
-           
-                 <h1>ピクトグラム</h1>
-            <!-- <img src="./images/pictgram.jpg" alt="" id="allPict5-10">
+
+            <h1>ピクトグラム</h1>
+            <!--
+                 <img src="./images/pictgram.jpg" alt="" id="allPict5-10">
             <img src="./images/pictgram.jpg" alt="" id="allPict4-10"
          -->
         </section>
