Base file complete

--- a/arashi.html
+++ b/arashi.html
@@ -40,19 +40,20 @@
 			width: 200px;
 			height: 200px;
 			box-sizing: border-box;
-			border: solid 1px red;
+			/* border: solid 1px red; */
 
 		}
 
 		.profileData {
 			width: calc(390px);
 			box-sizing: border-box;
-			border: solid 1px red;
+			/* border: solid 1px red; */
 			/* display: flex;
 			flex-wrap: wrap;
 			flex-direction: ; */
 		}
-		.profileData:nth-child(3){
+
+		.profileData:nth-child(3) {
 			width: 100%;
 			overflow-wrap: break-word;
 		}
@@ -111,7 +112,7 @@
 		/* footerセクションのデザイン */
 		footer {
 			border-left: none;
-			border-top: solid 2px red;
+			border-top: solid 2px black;
 			width: 100%;
 			margin-top: 20px;
 			display: flex;
@@ -123,6 +124,17 @@
 		}
 	</style>
 	<script src="switchscreen.js"></script>
+	<script>
+		document.addEventListener("DOMContentLoaded", function () {
+			const item1 = document.getElementById("menuNews");
+			item1.addEventListener("click", function () {
+				console.log("change...")
+			}, false);
+
+		}, false);
+
+
+	</script>
 </head>
 
 <body>
@@ -136,9 +148,9 @@
 	<nav>
 		<div class="NavItem">
 			<div class="menuItem" id="menuNews">News</div>
-			<div class="menuItem">Profile</div>
-			<div class="menuItem">Gallary</div>
-			<div class="menuItem">Discography</div>
+			<div class="menuItem" id="menuProfile">Profile</div>
+			<div class="menuItem" id="menuGallary">Gallary</div>
+			<div class="menuItem" id="menuDiscography">Discography</div>
 		</div>
 
 
@@ -210,5 +222,6 @@
 
 	</footer>
 </body>
+
 
 </html>
