--- a/index.html
+++ b/index.html
@@ -10,133 +10,14 @@
 	<link rel="stylesheet" href="./header.css">
 	<!-- navセクションのデザイン -->
 	<link rel="stylesheet" href="./nav.css">
-	<!-- <link rel="stylesheet" href="./main.css"> -->
-	<!-- <link rel="stylesheet" href="./footer.css">
+	<link rel="stylesheet" href="./main.css">
+	<link rel="stylesheet" href="news.css">
+	<!-- profileセクションのデザイン -->
 	<link rel="stylesheet" href="profile.css">
+	<!-- garallyのセクション -->
 	<link rel="stylesheet" href="gallaly.css">
-	<link rel="stylesheet" href="unused.css"> -->
-	<style>
-		/* mainセクションのデザイン */
-		section {
-			box-sizing: border-box;
-			/* border: solid 1px pink; */
-			width: calc(800px - 200px - 10px);
-			padding-top: 10px;
-		}
-
-		/* profileセクションのデザイン */
-		.secProfile {
-			display: block;
-			padding-top: 0;
-		}
-
-		.profilePerson {
-			display: flex;
-			box-sizing: border-box;
-			flex-wrap: wrap;
-		}
-
-		.profileFace {
-			width: 200px;
-			height: 200px;
-			box-sizing: border-box;
-			/* border: solid 1px red; */
-
-		}
-
-		.profileData {
-			width: calc(390px);
-			box-sizing: border-box;
-			/* border: solid 1px red; */
-			/* display: flex;
-			flex-wrap: wrap;
-			flex-direction: ; */
-		}
-
-		.profileData:nth-child(3) {
-			width: 100%;
-			overflow-wrap: break-word;
-		}
-
-		.profileItem {
-			display: flex;
-			flex-wrap: wrap;
-		}
-
-		.profileItem div:nth-child(1) {
-			width: 100px;
-			box-sizing: border-box;
-			/* border: solid 1px green; */
-		}
-
-		.profileItem div:nth-child(2) {
-			width: 200px;
-			box-sizing: border-box;
-			/* border: solid 1px lime; */
-		}
-
-		/* Newsについてのデザイン */
-		.secNews {
-			display: none;
-			/* display: flex;
-			flex-wrap: wrap; */
-		}
-
-		.newsItem {
-			margin-top: 10px;
-			border-bottom: solid 1px red;
-			display: flex;
-		}
-
-		.hiduke {
-			width: 150px;
-		}
-
-		.newsTitle {
-			width: 500px;
-		}
-
-		.newsToIchiran {
-			align-items: center;
-			text-align: right;
-		}
-
-		/* Garallyセクションについてのデザイン */
-		.secGallary {
-			display: none;
-		}
-
-		.garallyItemImage {
-			width: 300px;
-			height: 300px;
-			border: solid 1px red;
-		}
-
-		.garallyItemString {
-			width: 300px;
-
-		}
-
-		/* Discographyについてのデザイン */
-		.secDiscography {
-			display: none;
-		}
-
-		/* footerセクションのデザイン */
-		footer {
-			border-left: none;
-			border-top: solid 2px black;
-			width: 100%;
-			margin-top: 20px;
-			display: flex;
-		}
-
-		footer div {
-			align-items: center;
-			margin: 0 auto;
-		}
-	</style>
-	<!-- <script src="switchscreen.js"></script> -->
+	<link rel="stylesheet" href="discograpy.css">
+	<link rel="stylesheet" href="./footer.css">
 
 </head>
 
