--- a/プログラミング（JS）/迷路.html
+++ b/プログラミング（JS）/迷路.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="2020-1023b.js"></script>
-  <!-- <script src="my迷路.js"></script> -->
+  <!-- <script src="./myMaza.js"></script> -->
   <link rel="stylesheet" href="2020-1023.css">
   <script>
   </script>
