OC授業用のファイルの作成

--- a/2020-10-28-迷路(星野版）/2020-1023.html
+++ b/2020-10-28-迷路(星野版）/2020-1023.html
@@ -3,14 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <script src="2020-1023b.js"></script>
+  <script src="2020-1023c.js"></script>
   <link rel="stylesheet" href="2020-1023.css">
   <script>
   </script>
   <style>
-    canvas {
-      border: solid 1px red;
-    }
+
   </style>
 </head>
 
